# OSqlite

./: AUDIT-LUA.md  AUDIT.md  Cargo.toml  GNUmakefile  Makefile  limine.conf  rust-toolchain.toml  x86_64-heavenos.json
.cargo/: config.toml
boot/: Cargo.toml
boot/src/: lib.rs
docs/architecture/: inferno-sqlite-bare-metal.md
kernel/: Cargo.toml  build.rs  linker.ld
kernel/src/: lib.rs  main.rs
kernel/src/api/: http.rs  json.rs  mod.rs  tools.rs
kernel/src/arch/x86_64/: cpu.rs  gdt.rs  idt.rs  mod.rs  pic.rs  serial.rs  timer.rs
kernel/src/crypto/: der.rs  mod.rs  pin_verifier.rs
kernel/src/drivers/: mod.rs  pci.rs
kernel/src/drivers/nvme/: command.rs  mod.rs  pci.rs  queue.rs
kernel/src/drivers/virtio/: mod.rs  net.rs  virtqueue.rs
kernel/src/fs/: mod.rs
kernel/src/fs/styx/: message.rs  mod.rs  namespace.rs  server.rs
kernel/src/lua/: alloc.rs  builtins.rs  ffi.rs  mod.rs  repl.rs
kernel/src/mem/: dma.rs  heap.rs  mod.rs  paging.rs  phys.rs
kernel/src/net/: device.rs  dns.rs  mod.rs  stack.rs  tls.rs
kernel/src/shell/: agent.rs  commands.rs  line.rs  mod.rs
kernel/src/sqlite/: ffi.rs  mod.rs  vfs_bridge.rs
kernel/src/storage/: block_alloc.rs  block_device.rs  file_table.rs  mock_device.rs  mod.rs  tests.rs
kernel/src/vfs/: mod.rs  sqlite_vfs.rs
